--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ li {
 }
 
 .form__input:focus {
-	border: 1px solid #868397;
+	box-shadow:0 0 0 1px var(--color-input-stroke);
 }
 
 .password-header {
@@ -230,10 +230,11 @@ li {
 .question__link {
 	font-weight: 600;
 	color: var(--color-black);
+	transition: all 0.5s;
 }
 
 .question__link:hover {
-	box-shadow: 0 0 3px 0 #100F1450;
+	filter: drop-shadow(0 0 3px #100F1450);
 }
 
 @media (max-width: 479px) {
